--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h1>PORTOFOLIO</h1>
+    <img src="image/Foto.jpg" alt="Gaby" style="width:50%; height: 100%;">
+    <h2>Gebrina Augustine Padatu</h2>
+    <br>
+    <p1>Ini Prtofolio awal</p1>
 </body>
 </html>
+
+<!-- jangan pakai pixel, kalau bisa relatif dengan persen bair relatif ukurannya semua-->
