--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="image/Foto.jpg" alt="Gaby" style="width:50%; height: 100%;">
     <h2>Gebrina Augustine Padatu</h2>
     <br>
-    <p1>Ini Prtofolio awal</p1>
+    <p1>Ini Portofolio awal</p1>
 </body>
 </html>
 
