landing page asal
aijdhijsn

--- a/index.html
+++ b/index.html
@@ -1,17 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portofolio - Gebrina Augustine Padatu</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background: linear-gradient(to bottom, #f9f9f9, #e0e0e0);
+      color: #333;
+    }
+
+    header {
+      text-align: center;
+      padding: 5vh 2vw;
+      background-color: #4a90e2;
+      color: white;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+
+    header img {
+      width: 25%;
+      max-width: 200px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+
+    header h2 {
+      margin: 0.5rem 0;
+      font-size: 1.5rem;
+    }
+
+    main {
+      text-align: center;
+      padding: 5vh 10vw;
+    }
+
+    main p {
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+    }
+
+    .btn {
+      display: inline-block;
+      padding: 1rem 2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 0.5rem;
+      background-color: #4a90e2;
+      color: white;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background-color: #357ABD;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2vh;
+      background: #333;
+      color: white;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Header -->
+  <header>
     <h1>PORTOFOLIO</h1>
-    <img src="image/Foto.jpg" alt="Gaby" style="width:50%; height: 100%;">
+    <img src="image/Foto.jpg" alt="Foto Profil">
     <h2>Gebrina Augustine Padatu</h2>
-    <br>
-    <p1>Ini Portofolio awal</p1>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <p>Selamat datang di portofolio saya! Ini adalah landing page awal yang menampilkan informasi singkat tentang saya.</p>
+    <a href="#about" class="btn">Lihat Selengkapnya</a>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Gebrina Augustine Padatu - Semua Hak Dilindungi
+  </footer>
+
 </body>
 </html>
-
-<!-- jangan pakai pixel, kalau bisa relatif dengan persen bair relatif ukurannya semua-->
