--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
   <!-- Main Content -->
   <main>
-    <p>Selamat datang di portofolio saya! Ini adalah landing page awal yang menampilkan informasi singkat tentang saya.</p>
+    <p>Selamat datang! </p>
     <a href="#about">Lihat Selengkapnya</a>
   </main>
 
   <!-- Section About -->
   <section id="about">
-    <h2>Tentang Saya</h2>
-    <p>Saya adalah seorang mahasiswa/pekerja yang sedang belajar membuat website menggunakan HTML.</p>
+    <h2>About Me!</h2>
+    <p>Saya adalah seorang mahasiswa Teknik Informatika UPH</p>
   </section>
 
   <!-- Section Projects -->
@@ -39,13 +39,13 @@
   <!-- Section Contact -->
   <section id="contact">
     <h2>Kontak</h2>
-    <p>Email: gebrina@example.com</p>
-    <p>Instagram: @gebrina</p>
+    <p>Email: </p>
+    <p>Instagram: </p>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>&copy; 2025 Gebrina Augustine Padatu - Semua Hak Dilindungi</p>
+    <p>&copy; 2025 Gaby A.P - </p>
   </footer>
 
 </body>
